--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "rimraf": "^3.0.2",
+    "string-math": "^1.2.2",
     "three": "^0.137.0",
     "vue": "^3.2.39",
     "yarn": "^1.22.19"
