--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "private": true,
   "main": "index.js",
-  "windowTitle":"GulfieVision™",
+  "windowTitle": "GulfieVision™",
   "dependencies": {
+    "@kmamal/sdl": "^0.7.4",
     "electron": "^20.1.4",
     "lepikevents": "^1.6.5",
     "yargs": "^17.5.1"
